FTB-Community/force-app/main/default/objects/FTB_Championship__c/FTB_Championship__c.object-meta.xml
<CustomObject>
    <description>FTB Object to track championships</description>
    <label>Championship</label>
    <nameField>
        <displayFormat>FTBCMP-{0000000}</displayFormat>
        <label>Championship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Championships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>