FTB-Community/force-app/main/default/objects/FTB_Championship__c/fields/FTB_Name__c.field-meta.xml
<CustomField>
    <fullName>FTB_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>