FTB-Community/force-app/main/default/objects/FTB_Championship__c/fields/FTB_RemainingRounds__c.field-meta.xml
<CustomField>
    <fullName>FTB_RemainingRounds__c</fullName>
    <formula>FTB_TotalRounds__c - FTB_RoundsPlayed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Rounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>