FTB-Community/force-app/main/default/objects/FTB_Championship__c/fields/FTB_RoundsPlayed__c.field-meta.xml
<CustomField>
    <fullName>FTB_RoundsPlayed__c</fullName>
    <label>Rounds Played</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>