FTB-Community/force-app/main/default/objects/FTB_Championship__c/listViews/FTB_LV_Championship.listView-meta.xml
<ListView>
    <fullName>FTB_LV_Championship</fullName>
    <columns>NAME</columns>
    <columns>FTB_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FTB_StartDate__c</columns>
    <columns>FTB_EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Championships</label>
</ListView>